# PCASTNet

./: .gitignore  LICENSE  LICENSE.md  README.md  README_zh.md  demo.py  pyproject.toml  requirements.txt
src/: STC.py  data_loader.py  function.py  sampler.py  stc_datasets.py  stc_evaluation.py  stc_generation.py  stc_training.py  stc_utils.py
src/models/: __init__.py  adailn.py  cnn.py  vgg.py
src/pcastnet/: __init__.py  assets.py  cli.py  config.py  legacy.py  paths.py  runner.py  workflow.py
